fix: addressing SonarQube issue
CC-1229